Add service layer, rework repository and add basic tests
